Se creo un home del portafolio

--- a/index.html
+++ b/index.html
@@ -4,8 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tamara Lamas</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Tamara Lamas</h1>
+    <div class="main">
+      <div>
+        <div class="container">
+          <header>
+            <h1>Tamara Lamas</h1>
+          </header>
+          <div class="botonera">
+            <div class="boton">
+              <a
+                href="https://tamaral122004.github.io/TamaraL122004github.io/hola_mundo/"
+                >Hola Mundo</a
+              >
+            </div>
+            <div class="boton">
+              <a
+                href="https://tamaral122004.github.io/TamaraL122004github.io/hola_mundo/"
+                >Hola Mundo</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
